// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createEnv should throw an error if a required field is missing 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [
      "API_KEY"
    ],
    "message": "Required"
  }
]"
`;

exports[`createEnv should throw an error if runtime values are invalid 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "API_KEY"
    ],
    "message": "Expected string, received number"
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [
      "PORT"
    ],
    "message": "Expected number, received string"
  }
]"
`;

exports[`createEnv should throw if schema validation fails for nested structures 1`] = `
"[
  {
    "validation": "url",
    "code": "invalid_string",
    "message": "Invalid url",
    "path": [
      "CONFIG",
      "HOST"
    ]
  }
]"
`;
